force-app/zurich-base/main/default/objects/Case/fields/CreatedDateInfo__c.field-meta.xml
<CustomField>
    <fullName>CreatedDateInfo__c</fullName>
    <description>(ZE/OCS) Identifica la fecha de creación de la Nota en INFO. No tiene por qué coincidir con la fecha de creación estándar de Salesforce.</description>
    <label>CreatedDateInfo</label>
    <type>Date</type>
</CustomField>