force-app/zurich-base/main/default/objects/Case/fields/CreatedDateTimeInfo__c.field-meta.xml
<CustomField>
    <fullName>CreatedDateTimeInfo__c</fullName>
    <description>Fecha en la que se creó el tiquet en origen (canal único)</description>
    <label>Created date time info</label>
    <type>DateTime</type>
</CustomField>