force-app/zurich-base/main/default/objects/Case/fields/CreatedOffer__c.field-meta.xml
<CustomField>
    <fullName>CreatedOffer__c</fullName>
    <label>Created Offer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>