force-app/zurich-base/main/default/objects/Case/fields/CrossSellingApplied__c.field-meta.xml
<CustomField>
    <fullName>CrossSellingApplied__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Manualmente puede marcar usuario de USP</description>
    <label>Cross Selling Applied</label>
    <type>Checkbox</type>
</CustomField>