force-app/zurich-base/main/default/objects/Case/fields/CustomerFoundBy__c.field-meta.xml
<CustomField>
    <fullName>CustomerFoundBy__c</fullName>
    <description>Klinc: Indica el campo por el que se ha encontrado el cliente relacionado al caso creado por Web-to-case o Email-to-case</description>
    <label>Customer found by</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Policy Number</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>