force-app/zurich-base/main/default/objects/Case/fields/CustomerName__c.field-meta.xml
<CustomField>
    <fullName>CustomerName__c</fullName>
    <description>Nombre del tomador/cliente en Canal único (ZDA)</description>
    <label>Customer name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>