force-app/zurich-base/main/default/objects/Case/fields/CustomerNifCif__c.field-meta.xml
<CustomField>
    <fullName>CustomerNifCif__c</fullName>
    <description>NIF/CIF del tomador/cliente en Canal único (ZDA)</description>
    <label>Customer Nif/Cif</label>
    <length>75</length>
    <type>Text</type>
</CustomField>