force-app/zurich-base/main/default/objects/Case/fields/CustomerOrigin__c.field-meta.xml
<CustomField>
    <fullName>CustomerOrigin__c</fullName>
    <description>KLINC. Permite identificar ciertas tipologías de clientes</description>
    <label>Customer Origin</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Xiaomi</fullName>
            </value>
            <value>
                <fullName>Motor</fullName>
            </value>
            <value>
                <fullName>Life Fitbit</fullName>
            </value>
            <value>
                <fullName>SPAM</fullName>
            </value>
            <value>
                <fullName>Dr. Frog</fullName>
            </value>
            <value>
                <fullName>AliExpress</fullName>
            </value>
            <value>
                <fullName>BEIJING DIGITAL</fullName>
            </value>
            <value>
                <fullName>Max Movil</fullName>
            </value>
            <value>
                <fullName>Multidevice</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>