force-app/zurich-base/main/default/objects/Case/fields/CuTicketId__c.field-meta.xml
<CustomField>
    <fullName>CuTicketId__c</fullName>
    <description>Identificador del tiquet en Canal único (ZDA)</description>
    <externalId>true</externalId>
    <label>CU Ticket Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>