force-app/zurich-base/main/default/objects/Case/fields/DateReg__c.field-meta.xml
<CustomField>
    <fullName>DateReg__c</fullName>
    <description>Claim creation date</description>
    <label>Fecha creación de siniestro</label>
    <type>Date</type>
</CustomField>