force-app/zurich-base/main/default/objects/Case/fields/DateTimePendingNotifications__c.field-meta.xml
<CustomField>
    <fullName>DateTimePendingNotifications__c</fullName>
    <label>Date Time Pending Notifications</label>
    <type>DateTime</type>
</CustomField>