force-app/zurich-base/main/default/objects/Case/fields/DaysForAssignment__c.field-meta.xml
<CustomField>
    <fullName>DaysForAssignment__c</fullName>
    <description>Dias disponibles para la asignación</description>
    <formula>4 - (TODAY() - DATEVALUE(CreatedDate))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days For Assignment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>