force-app/zurich-base/main/default/objects/Case/fields/DaysToPolicyEndDate__c.field-meta.xml
<CustomField>
    <fullName>DaysToPolicyEndDate__c</fullName>
    <description>Días para el vencimiento de la póliza</description>
    <formula>PolicyEndDate__c - TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days To Policy End Date</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>