force-app/zurich-base/main/default/objects/Case/fields/DestinationCode__c.field-meta.xml
<CustomField>
    <fullName>DestinationCode__c</fullName>
    <description>KLINC: Indica el código de destino</description>
    <label>Destination Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>