force-app/zurich-base/main/default/objects/Case/fields/DisplayCase__c.field-meta.xml
<CustomField>
    <fullName>DisplayCase__c</fullName>
    <formula>IF(CONTAINS($User.QueuesView__c,OwnerName__c)&amp;&amp; OwnerName__c!=null ,true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DisplayCase</label>
    <type>Checkbox</type>
</CustomField>