force-app/zurich-base/main/default/objects/Case/fields/DisplayCaseMiCentro__c.field-meta.xml
<CustomField>
    <fullName>DisplayCaseMiCentro__c</fullName>
    <formula>IF
(
(CONTAINS(OwnerName__c, $CustomMetadata.Global_Configuration__mdt.Filter_OwnerName_USP.Value__c)&amp;&amp;
NOT
(
CONTAINS(OwnerName__c, $CustomMetadata.Global_Configuration__mdt.Filter_OwnerName_Calidad.Value__c )|| CONTAINS(OwnerName__c, $CustomMetadata.Global_Configuration__mdt.Filter_OwnerName_SME.Value__c) || CONTAINS(OwnerName__c, $CustomMetadata.Global_Configuration__mdt.Filter_OwnerName_Integraciones.Value__c)
))
||CONTAINS(OwnerName__c, $CustomMetadata.Global_Configuration__mdt.Filter_OwnerName_Suscripcion.Value__c) , true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DisplayCaseMiCentro</label>
    <type>Checkbox</type>
</CustomField>