force-app/zurich-base/main/default/objects/Case/fields/DocumentationHashId__c.field-meta.xml
<CustomField>
    <fullName>DocumentationHashId__c</fullName>
    <externalId>true</externalId>
    <label>Documentation Hash Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>