force-app/zurich-base/main/default/objects/Case/fields/EconomicImpact__c.field-meta.xml
<CustomField>
    <fullName>EconomicImpact__c</fullName>
    <label>Economic Impact</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>