force-app/zurich-base/main/default/objects/Case/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Campo que recupera el email del usuario creador del caso</description>
    <formula>CreatedBy.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email</label>
    <type>Text</type>
</CustomField>