force-app/zurich-base/main/default/objects/Case/fields/EmployeeNumber__c.field-meta.xml
<CustomField>
    <fullName>EmployeeNumber__c</fullName>
    <description>Código del empleado que ha creado la petición (ZDA)</description>
    <label>Employee number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>