force-app/zurich-base/main/default/objects/Case/fields/EndDate__c.field-meta.xml
<CustomField>
    <fullName>EndDate__c</fullName>
    <description>Fecha vencimiento de la póliza, se rellena a través de la quickAction &quot;NuevoCasoRetencion&quot; y en trigger before insert</description>
    <label>Policy End Date</label>
    <type>Date</type>
</CustomField>