force-app/zurich-base/main/default/objects/Case/fields/EnlaceZonaZurich__c.field-meta.xml
<CustomField>
    <fullName>EnlaceZonaZurich__c</fullName>
    <label>Enlace Zona Zurich</label>
    <type>Url</type>
</CustomField>