force-app/zurich-base/main/default/objects/Case/fields/EstimatedEndDate__c.field-meta.xml
<CustomField>
    <fullName>EstimatedEndDate__c</fullName>
    <description>Fecha prevista de finalización de la petición según el SLA en Canal único (ZDA)</description>
    <label>Estimated end date</label>
    <type>DateTime</type>
</CustomField>