force-app/zurich-base/main/default/objects/Case/fields/ExpectedClosingDate__c.field-meta.xml
<CustomField>
    <fullName>ExpectedClosingDate__c</fullName>
    <label>ExpectedClosingDate</label>
    <type>Date</type>
</CustomField>