force-app/zurich-base/main/default/objects/Case/fields/ExpirationDays__c.field-meta.xml
<CustomField>
    <fullName>ExpirationDays__c</fullName>
    <formula>EndDate__c - TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expiration Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>