force-app/zurich-base/main/default/objects/Case/fields/Form_type__c.field-meta.xml
<CustomField>
    <fullName>Form_type__c</fullName>
    <label>Form type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Review</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>