force-app/zurich-base/main/default/objects/Case/fields/GenesysID__c.field-meta.xml
<CustomField>
    <fullName>GenesysID__c</fullName>
    <label>GenesysID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>