force-app/zurich-base/main/default/objects/Case/fields/GoogleAddress__c.field-meta.xml
<CustomField>
    <fullName>GoogleAddress__c</fullName>
    <formula>IF(ISBLANK(CompanyBillingAddress__c),&quot;&quot;,HYPERLINK(&quot;https://www.google.com/maps?language=en_US&amp;q=&quot;+ RobotCompanyRoadType__c+&quot; &quot; +RobotCompanyRoadName__c+&quot; &quot;+RobotCompanyRoadNumber__c+&quot;,&quot;+RobotCompanyProvince__c+&quot;,&quot;+RobotCompanyZipCode__c, CompanyBillingAddress__c))</formula>
    <label>Google Address</label>
    <type>Text</type>
</CustomField>