force-app/zurich-base/main/default/objects/Case/fields/Guarantees__c.field-meta.xml
<CustomField>
    <fullName>Guarantees__c</fullName>
    <description>Picklist para CDEX de garantías</description>
    <label>Guarantees</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>ProductGroup__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Travel assistance</fullName>
            </value>
            <value>
                <fullName>Refrigerated goods</fullName>
            </value>
            <value>
                <fullName>Own damage</fullName>
            </value>
            <value>
                <fullName>Brico</fullName>
            </value>
            <value>
                <fullName>Defence and claims</fullName>
            </value>
            <value>
                <fullName>Glass</fullName>
            </value>
            <value>
                <fullName>Extensive</fullName>
            </value>
            <value>
                <fullName>Water damage</fullName>
            </value>
            <value>
                <fullName>Electrical damage</fullName>
            </value>
            <value>
                <fullName>Car window</fullName>
            </value>
            <value>
                <fullName>Atmospheric phenomena</fullName>
            </value>
            <value>
                <fullName>Civil liability</fullName>
            </value>
            <value>
                <fullName>Fire</fullName>
            </value>
            <value>
                <fullName>Theft</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>