force-app/zurich-base/main/default/objects/Case/fields/HasBeenTransfered__c.field-meta.xml
<CustomField>
    <fullName>HasBeenTransfered__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has been transfered?</label>
    <type>Checkbox</type>
</CustomField>