force-app/zurich-base/main/default/objects/Case/fields/HegeoClaimId__c.field-meta.xml
<CustomField>
    <fullName>HegeoClaimId__c</fullName>
    <label>Hegeo Claim Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>