force-app/zurich-base/main/default/objects/Case/fields/HegeoIntermediaryId__c.field-meta.xml
<CustomField>
    <fullName>HegeoIntermediaryId__c</fullName>
    <label>Robot Intermediary Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>