force-app/zurich-base/main/default/objects/Case/fields/HegeoOfferId__c.field-meta.xml
<CustomField>
    <fullName>HegeoOfferId__c</fullName>
    <label>Hegeo Offer Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>