force-app/zurich-base/main/default/objects/Case/fields/HegeoPolicyId__c.field-meta.xml
<CustomField>
    <fullName>HegeoPolicyId__c</fullName>
    <label>Hegeo Policy Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>