force-app/zurich-base/main/default/objects/Case/fields/HegeoPrePolicyId__c.field-meta.xml
<CustomField>
    <fullName>HegeoPrePolicyId__c</fullName>
    <label>Hegeo PrePolicy Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>