force-app/zurich-base/main/default/objects/Case/fields/HegeoProductGroupCode__c.field-meta.xml
<CustomField>
    <fullName>HegeoProductGroupCode__c</fullName>
    <label>Robot Product Group Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>