force-app/zurich-base/main/default/objects/Case/fields/HegeoReceiptNumber__c.field-meta.xml
<CustomField>
    <fullName>HegeoReceiptNumber__c</fullName>
    <label>Robot Receipt Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>