force-app/zurich-base/main/default/objects/Case/fields/HGPrevisionCambio__c.field-meta.xml
<CustomField>
    <fullName>HGPrevisionCambio__c</fullName>
    <label>HG Prevision cambio</label>
    <length>50</length>
    <type>Text</type>
</CustomField>