force-app/zurich-base/main/default/objects/Case/fields/IdCaseClone__c.field-meta.xml
<CustomField>
    <fullName>IdCaseClone__c</fullName>
    <label>IdCaseClone</label>
    <length>20</length>
    <type>Text</type>
</CustomField>