force-app/zurich-base/main/default/objects/Case/fields/IdTipologiaBs__c.field-meta.xml
<CustomField>
    <fullName>IdTipologiaBs__c</fullName>
    <description>Identificador de la tipologia de la peticion en Canal unico (ZDA)</description>
    <label>Id BS typology</label>
    <length>200</length>
    <type>Text</type>
</CustomField>