force-app/zurich-base/main/default/objects/Case/fields/Industry__c.field-meta.xml
<CustomField>
    <fullName>Industry__c</fullName>
    <description>Indica la vertical o industria a la que pertenece el caso. Necesario para el enrutamiento en base a vertical.</description>
    <label>Industry</label>
    <length>255</length>
    <type>Text</type>
</CustomField>