force-app/zurich-base/main/default/objects/Case/fields/INFONoteId__c.field-meta.xml
<CustomField>
    <fullName>INFONoteId__c</fullName>
    <description>(OCS). Identificador único del caso (NOTE).</description>
    <externalId>true</externalId>
    <label>INFONoteId</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>