force-app/zurich-base/main/default/objects/Case/fields/InsuredAmount__c.field-meta.xml
<CustomField>
    <fullName>InsuredAmount__c</fullName>
    <description>EON. Importe total asegurado</description>
    <label>Insured amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>