force-app/zurich-base/main/default/objects/Case/fields/InsuredObjectId__c.field-meta.xml
<CustomField>
    <fullName>InsuredObjectId__c</fullName>
    <description>Hidden field to save the value received from IBA</description>
    <label>InsuredObjectId</label>
    <length>80</length>
    <type>Text</type>
</CustomField>