force-app/zurich-base/main/default/objects/Case/fields/InteractionStatus__c.field-meta.xml
<CustomField>
    <fullName>InteractionStatus__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Interaction Status</label>
    <type>Checkbox</type>
</CustomField>