force-app/zurich-base/main/default/objects/Case/fields/InterlocutorRole__c.field-meta.xml
<CustomField>
    <fullName>InterlocutorRole__c</fullName>
    <description>Función del gestor del banco.</description>
    <label>Interlocutor / Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>