force-app/zurich-base/main/default/objects/Case/fields/Intermediary__c.field-meta.xml
<CustomField>
    <fullName>Intermediary__c</fullName>
    <description>OCS. Muestra el intermediario del registro relacionado, si lo hubiera</description>
    <formula>IF(NOT(ISBLANK(PolicyId__c)),HYPERLINK(&apos;/lightning/r/Account/&apos;&amp;PolicyId__r.IntermediaryId__c&amp;&apos;/view&apos;,PolicyId__r.IntermediaryId__r.Name,&apos;_self&apos;),
IF(NOT(ISBLANK(ClaimId__c)),HYPERLINK(&apos;/lightning/r/Account/&apos;&amp;ClaimId__r.Policy__r.IntermediaryId__c&amp;&apos;/view&apos;,ClaimId__r.Policy__r.IntermediaryId__r.Name,&apos;_self&apos;),
IF(NOT(ISBLANK(OfferId__c)),HYPERLINK(&apos;/lightning/r/Account/&apos;&amp;OfferId__r.IntermediaryId__c&amp;&apos;/view&apos;,OfferId__r.IntermediaryId__r.Name,&apos;_self&apos;),
IF(OR(Account.RecordType.DeveloperName = &apos;Intermediary&apos;,Account.RecordType.DeveloperName = &apos;PartnerOCS&apos;),
HYPERLINK(&apos;/lightning/r/Account/&apos;&amp;AccountId&amp;&apos;/view&apos;,Account.Name,&apos;_self&apos;),&apos;&apos;))))</formula>
    <label>Intermediary</label>
    <type>Text</type>
</CustomField>