force-app/zurich-base/main/default/objects/Case/fields/Intermediary_Group__c.field-meta.xml
<CustomField>
    <fullName>Intermediary_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Intermediary Group</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cases (Intermediary Group)</relationshipLabel>
    <relationshipName>Cases_AGR</relationshipName>
    <type>Lookup</type>
</CustomField>