force-app/zurich-base/main/default/objects/Case/fields/IntermediaryId__c.field-meta.xml
<CustomField>
    <fullName>IntermediaryId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>OCS</description>
    <label>Intermediary Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>