force-app/zurich-base/main/default/objects/Case/fields/IntermediaryOwner__c.field-meta.xml
<CustomField>
    <fullName>IntermediaryOwner__c</fullName>
    <description>Campo para indicar quien es el agente/rol responsable del caso en este momento.</description>
    <label>Intermediary Owner</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agente mediador</fullName>
            </value>
            <value>
                <fullName>Call Center</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>