force-app/zurich-base/main/default/objects/Case/fields/IntermediaryVisibilityAcc__c.field-meta.xml
<CustomField>
    <fullName>IntermediaryVisibilityAcc__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Campo de Visibildad para ZRM</description>
    <label>Intermediary Visibility Acc</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cases (Intermediary Visibility Acc)</relationshipLabel>
    <relationshipName>VisibilityCases</relationshipName>
    <type>Lookup</type>
</CustomField>