force-app/zurich-base/main/default/objects/Case/fields/IsBussinessCodeExcluded__c.field-meta.xml
<CustomField>
    <fullName>IsBussinessCodeExcluded__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo que nos indica si el código de negocio de la póliza se encuentra entre los excluidos para los partners de BancSabadell</description>
    <label>Is Bussiness Code Excluded?</label>
    <type>Checkbox</type>
</CustomField>