force-app/zurich-base/main/default/objects/Case/fields/IsCampaignCase__c.field-meta.xml
<CustomField>
    <fullName>IsCampaignCase__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marcado si el caso pertenece a alguna campaña.</description>
    <label>Is campaign case?</label>
    <type>Checkbox</type>
</CustomField>