force-app/zurich-base/main/default/objects/Case/fields/isCloneCase__c.field-meta.xml
<CustomField>
    <fullName>isCloneCase__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isCloneCase</label>
    <type>Checkbox</type>
</CustomField>