force-app/zurich-base/main/default/objects/Case/fields/IsCreatedOnExcludedMailbox__c.field-meta.xml
<CustomField>
    <fullName>IsCreatedOnExcludedMailbox__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indica si el caso ha sido creado tras enviarse un email a alguno de los buzones excluidos</description>
    <label>Created on excluded mailbox</label>
    <type>Checkbox</type>
</CustomField>