force-app/zurich-base/main/default/objects/Case/fields/IsNotSameIntermediary__c.field-meta.xml
<CustomField>
    <fullName>IsNotSameIntermediary__c</fullName>
    <description>USP. Indica si el mediador asociado a la póliza u oferta noes el mismo asociado al caso</description>
    <formula>AND(NOT(ISBLANK(AccountId)),NOT(ISBLANK(PolicyId__r.IntermediaryId__c)),AccountId != PolicyId__r.IntermediaryId__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Not Same Intermediary</label>
    <type>Checkbox</type>
</CustomField>