force-app/zurich-base/main/default/objects/Case/fields/IsParentAnonymized__c.field-meta.xml
<CustomField>
    <fullName>IsParentAnonymized__c</fullName>
    <formula>OR(Account.Anonymized__c,  MediatedCustomer__r.Anonymized__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsParentAnonymized</label>
    <type>Checkbox</type>
</CustomField>