force-app/zurich-base/main/default/objects/Case/fields/IsParentBlocked__c.field-meta.xml
<CustomField>
    <fullName>IsParentBlocked__c</fullName>
    <formula>OR(Account.Blocked__c,  MediatedCustomer__r.Blocked__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsParentBlocked</label>
    <type>Checkbox</type>
</CustomField>