force-app/zurich-base/main/default/objects/Case/fields/IsQuotation__c.field-meta.xml
<CustomField>
    <fullName>IsQuotation__c</fullName>
    <description>EON. Indica si el caso corresponde a una cotización o un caso de tipo consulta.</description>
    <formula>ISPICKVAL(Type,&quot;Venta&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>¿Es cotización?</label>
    <type>Checkbox</type>
</CustomField>