force-app/zurich-base/main/default/objects/Case/fields/IsRemitentInContact__c.field-meta.xml
<CustomField>
    <fullName>IsRemitentInContact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo que nos indica si el SuppliedEmail desde el que nos llega un caso se encuentra entre los Contact Point Emails de la cuenta asociada</description>
    <label>Is Remitent In Contact</label>
    <type>Checkbox</type>
</CustomField>