force-app/zurich-base/main/default/objects/Case/fields/LastNameOwnerPrior__c.field-meta.xml
<CustomField>
    <fullName>LastNameOwnerPrior__c</fullName>
    <label>LastNameOwnerPrior</label>
    <length>25</length>
    <type>Text</type>
</CustomField>