force-app/zurich-base/main/default/objects/Case/fields/LinkIdGenesys__c.field-meta.xml
<CustomField>
    <fullName>LinkIdGenesys__c</fullName>
    <formula>&apos;https://apps.mypurecloud.ie/directory/#/engage/admin/interactions/&apos;+GenesysID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LinkIdGenesys</label>
    <type>Text</type>
</CustomField>