force-app/zurich-base/main/default/objects/Case/fields/LinkZonaZurich__c.field-meta.xml
<CustomField>
    <fullName>LinkZonaZurich__c</fullName>
    <description>Enlace a Zona Zurich, a la póliza en concreto dentro de la sección “Gestión Cartera” para que el mediador pueda gestionar los descuentos de la póliza.</description>
    <formula>HYPERLINK(
    $Setup.NuevaZonaZurich__c.URL__c + &quot;?appNameOpenFlow=zrm&amp;operationType=gestionCartera&amp;codigoPoliza=&quot; +  PolicyId__r.InfoPolicyNumber__c  + &quot;&amp;versionPoliza=&quot; +  PolicyId__r.PolicyVersion__c  ,
    $Label.ZRMCaseLinkZonaZurichHyperlinkFormulaFieldFriendlyName,
    &quot;_self&quot;
)</formula>
    <label>Link Zona Zurich</label>
    <type>Text</type>
</CustomField>