force-app/zurich-base/main/default/objects/Case/fields/MasterClaimNo__c.field-meta.xml
<CustomField>
    <fullName>MasterClaimNo__c</fullName>
    <label>Número de siniestro Master</label>
    <length>80</length>
    <type>Text</type>
</CustomField>