force-app/zurich-base/main/default/objects/Case/fields/MediatedCustomer__c.field-meta.xml
<CustomField>
    <fullName>MediatedCustomer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Para que se puedan asociar los casos correctamente a los clientes cuando dichos casos los gestiona el mediador en su nombre</description>
    <label>Mediated Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cases (Mediated Customer)</relationshipLabel>
    <relationshipName>MediatedCases</relationshipName>
    <type>Lookup</type>
</CustomField>