force-app/zurich-base/main/default/objects/Case/fields/MediatedCustomerFormula__c.field-meta.xml
<CustomField>
    <fullName>MediatedCustomerFormula__c</fullName>
    <formula>IF(MediatedCustomer__r.IsPersonAccount &amp;&amp;  NOT(ISBLANK(MediatedCustomer__c)) ,
&quot;Tomador: &quot;+ MediatedCustomer__r.FirstName + &quot;&quot; +MediatedCustomer__r.LastName, 
IF(ISBLANK(MediatedCustomer__c),&quot;&quot; , &quot;Tomador: &quot;+MediatedCustomer__r.Name))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mediated Customer Formula</label>
    <type>Text</type>
</CustomField>