force-app/zurich-base/main/default/objects/Case/fields/MediatedCustomerNationalId__c.field-meta.xml
<CustomField>
    <fullName>MediatedCustomerNationalId__c</fullName>
    <formula>MediatedCustomer__r.NationalId__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mediated Customer National Id</label>
    <type>Text</type>
</CustomField>