force-app/zurich-base/main/default/objects/Case/fields/MediatedCustomerSic__c.field-meta.xml
<CustomField>
    <fullName>MediatedCustomerSic__c</fullName>
    <formula>MediatedCustomer__r.Sic  + &apos; &apos; +  MediatedCustomer__r.SicDesc</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mediated Customer Sic</label>
    <type>Text</type>
</CustomField>