force-app/zurich-base/main/default/objects/Case/fields/MiCaso__c.field-meta.xml
<CustomField>
    <fullName>MiCaso__c</fullName>
    <description>OCS. Se informa a true si el propietario del caso es el usuario activo</description>
    <formula>OwnerId = $User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mi Caso</label>
    <type>Checkbox</type>
</CustomField>