force-app/zurich-base/main/default/objects/Case/fields/MiCentro__c.field-meta.xml
<CustomField>
    <fullName>MiCentro__c</fullName>
    <description>OCS. Indica si el propietario del caso tiene asignado el mismo centro que el usuario activo</description>
    <formula>Owner:User.Department = $User.Department</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mi Centro</label>
    <type>Checkbox</type>
</CustomField>