force-app/zurich-base/main/default/objects/Case/fields/ModifiedByGrandesPymes__c.field-meta.xml
<CustomField>
    <fullName>ModifiedByGrandesPymes__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ModifiedByGrandesPymes</label>
    <type>Checkbox</type>
</CustomField>