force-app/zurich-base/main/default/objects/Case/fields/ModifiedByUSP__c.field-meta.xml
<CustomField>
    <fullName>ModifiedByUSP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ModifiedByUSP</label>
    <type>Checkbox</type>
</CustomField>