force-app/zurich-base/main/default/objects/Case/fields/Monitoring__c.field-meta.xml
<CustomField>
    <fullName>Monitoring__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Automatismo de Seguimiento</description>
    <label>Monitoring</label>
    <type>Checkbox</type>
</CustomField>