force-app/zurich-base/main/default/objects/Case/fields/NetPremiumRating__c.field-meta.xml
<CustomField>
    <fullName>NetPremiumRating__c</fullName>
    <description>EON. Estimación de prima neta. Obligatorio a partir de Quoted</description>
    <label>Net Premium rating</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>