force-app/zurich-base/main/default/objects/Case/fields/Object__c.field-meta.xml
<CustomField>
    <fullName>Object__c</fullName>
    <description>Dependiente de Type N3</description>
    <label>Object</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>TypeN3__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bono</fullName>
            </value>
            <value>
                <fullName>Mi Zurich</fullName>
            </value>
            <value>
                <fullName>Oferta</fullName>
            </value>
            <value>
                <fullName>Póliza Viaje</fullName>
            </value>
            <value>
                <fullName>Recibo</fullName>
            </value>
            <value>
                <fullName>Póliza</fullName>
            </value>
            <value>
                <fullName>Productos</fullName>
            </value>
            <value>
                <fullName>Estado gestión</fullName>
            </value>
            <value>
                <fullName>Garantías/capitales asegurados</fullName>
            </value>
            <value>
                <fullName>Precio renovación póliza</fullName>
            </value>
            <value>
                <fullName>Riesgo asegurado</fullName>
            </value>
            <value>
                <fullName>Recibo -Estado</fullName>
            </value>
            <value>
                <fullName>Recibo – Importe</fullName>
            </value>
            <value>
                <fullName>Recibo - Fecha</fullName>
            </value>
            <value>
                <fullName>Peritación</fullName>
            </value>
            <value>
                <fullName>Siniestros</fullName>
            </value>
            <value>
                <fullName>Soporte navegación</fullName>
            </value>
            <value>
                <fullName>GDPR</fullName>
            </value>
            <value>
                <fullName>Carta verde</fullName>
            </value>
            <value>
                <fullName>Certificados</fullName>
            </value>
            <value>
                <fullName>Comisiones</fullName>
            </value>
            <value>
                <fullName>Documentación mediadores</fullName>
            </value>
            <value>
                <fullName>Documento seguro</fullName>
            </value>
            <value>
                <fullName>Duplicado de Cartera</fullName>
            </value>
            <value>
                <fullName>Factura mediador</fullName>
            </value>
            <value>
                <fullName>Informe de Comisiones</fullName>
            </value>
            <value>
                <fullName>Modelo 347 / DEC</fullName>
            </value>
            <value>
                <fullName>N57 / Asesoría Jurídica</fullName>
            </value>
            <value>
                <fullName>Normativa</fullName>
            </value>
            <value>
                <fullName>Parte DDA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>