force-app/zurich-base/main/default/objects/Case/fields/OfferId__c.field-meta.xml
<CustomField>
    <fullName>OfferId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>OCS</description>
    <label>Offer Name</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>